--- a/web/resources/templates/_layout.html
+++ b/web/resources/templates/_layout.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/api-docs">API</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://evework.xyz/">EMPOWER YOUR EMPIRE</a>
+            </li>
 
             {{if .UI.LoginEnabled}}
               {{if .UI.User}}
