--- a/web/resources/templates/main.html
+++ b/web/resources/templates/main.html
@@ -1,5 +1,5 @@
-{{define "title"}}Evepraisal - Price check Eve Online items from Cargo Scans, Contracts, D-Scan, EFT, Inventory, Asset listing, Loot History, PI, Survey Scanner, Killmails, Wallet Transactions, Inventory, Assets{{end}}
-{{define "description"}}Price check Eve Online items from Cargo Scans, Contracts, D-Scan, EFT, Inventory, Asset listing, Loot History, PI, Survey Scanner, Killmails, Wallet TransactionsBlocks, Inventory, Assets{{end}}
+{{define "title"}}Evepraisal: Quick Eve Online Item Price Checks for Cargo, Contracts & More{{end}}
+{{define "description"}Effortlessly price check your Eve Online items with Evepraisal. Our tool simplifies appraisals for cargo scans, contracts, D-Scans, and more, including EFT, inventory management, and asset listings. Ideal for loot history, planetary interaction, survey scanning, killmails, and wallet transactions. Streamline your Eve Online trading experience with quick and accurate valuations.{{end}}
 
 {{define "content"}}
 <div class="row">
@@ -11,16 +11,17 @@
     <div class="float-right alert alert-dark" role="alert">
       <strong>{{comma .Page.TotalAppraisalCount}} appraisals performed so far!</strong>
     </div>
-    <h4>What is this?</h4>
+    <h1>Eve Online Item Appraisal Simplified</h1>
+    <h2>Quick and Accurate Price Checks</h2>
     <p>
       Evepraisal is a tool for quickly getting bulk estimates of items from Eve Online.
     </p>
-    <h4>How does this work?</h4>
+    <h3>How does this work?</h3>
     <p>
        Find something in Eve Online that you want to price check like a contract, cargo scan result, etc. Press <kbd>CTRL + A, CTRL + C</kbd>, then click on the lovely box to the left or above this and press <kbd>CTRL + V</kbd>. Submit and you should see a price breakdown of all the items.
     </p>
 
-    <h4>What all can I paste in there?</h4>
+    <h3>Supported Formats for Appraisal</h3>
     <p>At first, this started as a simple cargo scan estimator but over time more formats have been added to the parser so you can use it as a more general price checker. Currently the following formats are supported:</p>
     <h6>
       <span class="badge badge-pill badge-dark">Inventory</span>
