--- a/web/resources/templates/_layout.html
+++ b/web/resources/templates/_layout.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="author" content="Eveworks Enterprises">
     <meta name="description" content="{{template "description" .}}">
-
+    <meta name="keywords" content="Eve Online, Eve Online Price Check, Eve Appraisal, Cargo Scans, Contracts, D-Scan, EFT, Inventory Management, Asset Listing, Loot History, Planetary Interaction, Survey Scanner, Killmails, Wallet Transactions">
+    <meta name="description" content="Evepraisal offers comprehensive price checks for Eve Online items, including cargo scans, contracts, D-Scans, and more. Get accurate and fast valuations for your in-game assets.">
     <link rel="icon" href="/static/favicon.ico">
 
     <title>{{template "title" .}}</title>
