--- a/web/resources/templates/main.html
+++ b/web/resources/templates/main.html
@@ -1,5 +1,5 @@
 {{define "title"}}Evepraisal: Quick Eve Online Item Price Checks for Cargo, Contracts & More{{end}}
-{{define "description"}Effortlessly price check your Eve Online items with Evepraisal. Our tool simplifies appraisals for cargo scans, contracts, D-Scans, and more, including EFT, inventory management, and asset listings. Ideal for loot history, planetary interaction, survey scanning, killmails, and wallet transactions. Streamline your Eve Online trading experience with quick and accurate valuations.{{end}}
+{{define "description"}}Effortlessly price check your Eve Online items with Evepraisal. Our tool simplifies appraisals for cargo scans, contracts, D-Scans, and more, including EFT, inventory management, and asset listings. Ideal for loot history, planetary interaction, survey scanning, killmails, and wallet transactions. Streamline your Eve Online trading experience with quick and accurate valuations.{{end}}
 
 {{define "content"}}
 <div class="row">
